--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.15.11
 
 # Mod Properties
 mod_version=0.1-1.20.1
-maven_group=net.cxncentrate.tutorialmod
-archives_base_name=tutorialmod
+maven_group=us.diewaldmert.bischlmod
+archives_base_name=bischlmod
 
 # Dependencies
 fabric_version=0.92.1+1.20.1
